--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,369 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  color: var(--text-color, #f1b2ce);
+  font-family: var(--page-font-family, "IBM Plex mono", monospace);
+  font-size: 18px;
+  line-height: 23.4px;
+  background-color: var(--page-background-color, #fff);
+  font-family: var(--page-font-family, "IBM Plex mono", monospace);
+}
+
+/* Зона header  */
+
+.header {
+  height: 100vh;
+  min-height: 668px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content min-content 1fr 1fr;
+  align-items: start;
+  padding: 10px;
+  background-image: var(
+    --page-background-image,
+    url("../images/cover-image.png")
+  );
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.decorated-zone {
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::before {
+  border-inline-end: 1px solid var(--secondary-color, #ff0070);
+  border-block-start: 1px solid var(--secondary-color, #ff0070);
+  inset-inline-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  justify-self: end;
+  align-self: start;
+}
+
+.decorated-zone::after {
+  border-inline-start: 1px solid var(--secondary-color, #ff0070);
+  border-block-end: 1px solid var(--secondary-color, #ff0070);
+  justify-self: start;
+  align-self: end;
+}
+
+.rec-decor {
+  position: absolute;
+  visibility: var(--rec-decor-visibility, visible);
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  inset-inline-end: 20px;
+  inset-block-start: 10px;
+}
+
+.rec-decor::after {
+  content: "";
+  border-radius: 50%;
+  background: var(--accent-color, #ff0070);
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+.rec-decor::before {
+  content: "REC";
+  color: var(--accent-color, #ff0070);
+  line-height: 24px;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: start;
+  margin-top: 39px;
+  color: var(--secondary-color);
+  cursor: pointer;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 2px 12px;
+  color: var(--secondary-color, #ff0070);
+  line-height: 18px;
+  text-transform: lowercase;
+  background: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button_active {
+  border-color: currentColor;
+  cursor: default;
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  border-color: var(--secondary-color-o-40, #ff007040);
+}
+
+.header__theme-menu-button:focus {
+  outline: 0;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end-color: currentColor;
+}
+
+.page__title {
+  color: var(--brand-color, #db00ff);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 83%;
+  font-weight: 700;
+  margin-block-start: 68px;
+}
+
+.header__title {
+  margin-block-start: 55px;
+  color: var(--highlight-color, #000028);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: inherit;
+  background-color: var(--accent-color, #ff0070);
+  align-self: flex-start;
+  justify-self: start;
+  border: 1px solid red;
+  inline-size: 100%;
+}
+
+/* Секции  */
+
+.main {
+  display: grid;
+  gap: 50px;
+  padding: 40px 10px;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.shadow-decor {
+  text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
+}
+
+.section {
+  display: grid;
+  gap: 20px;
+}
+
+.section-how__title {
+  margin-block-end: 20px;
+}
+
+.articles-list {
+  display: grid;
+  gap: 20px;
+}
+
+.article {
+  display: grid;
+  gap: 10px;
+}
+
+.title {
+  color: var(--secondary-color, #ff0070);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.title-decor {
+  color: var(--highlight-color, #000028);
+  background: var(--accent-color, #ff0070);
+}
+
+.section-gallery {
+  gap: 10px;
+}
+
+.gallery-list {
+  display: grid;
+  gap: 10px;
+}
+
+.gallery-list__item-img {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.footer {
+  height: 100vh;
+  border: 1px solid red;
+  min-height: 668px;
+  display: grid;
+  padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.footer__title {
+  color: var(--brand-color, #db00ff);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 83%;
+  font-weight: 700;
+  margin-block-start: 125px;
+}
+
+@media (width >= 768px) {
+  .rec-decor {
+    inset-inline-end: 28px;
+    inset-block-start: 20px;
+  }
+
+  .section {
+    grid-template-columns: clamp(236px, calc(100% / 3.25), 315px) 1fr;
+  }
+
+  .section-what h2.title {
+    grid-row: 1;
+    grid-column: 1;
+  }
+
+  .section_what__articles-list {
+    grid-row: 2;
+    grid-column: span 2;
+  }
+
+  .section-how__articles-list {
+    max-width: 472px;
+  }
+
+  .section-how__title {
+    height: 23px;
+    margin-block-end: 20px;
+  }
+  .section-gallery {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .section-how__title {
+    grid-column-start: 2;
+  }
+
+  .section-how__articles-list {
+    grid-column-start: 2;
+  }
+
+  .gallery-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .gallery-list__item:first-child,
+  .gallery-list__item:last-child {
+    grid-column-start: span 2;
+  }
+
+  .gallery-list__item:nth-child(2),
+  .gallery-list__item:nth-child(3) {
+    grid-row-start: span 2;
+  }
+
+  .header {
+    padding: 0;
+    padding-right: 20px;
+    display: grid;
+  }
+
+  .header__theme-menu {
+    margin-block-start: 170px;
+    margin-block-end: 70px;
+  }
+
+  .page__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    align-self: flex-start;
+    margin-block-start: 100px;
+  }
+
+  .header__title {
+    margin-block-start: 45px;
+    justify-self: end;
+    inline-size: clamp(364px, calc(100% / 2 - 10px), 491px);
+  }
+
+  .main {
+    gap: 80px;
+    padding: 60px 20px;
+  }
+
+  .footer__title {
+    justify-self: center;
+    align-self: center;
+    margin-block-end: 139px;
+  }
+}
+
+@media (width >= 1024px) {
+  .page__title {
+    text-shadow: 4px 4px 0 var(--color-purple-2, #ff0070);
+    margin-block-start: 270px;
+  }
+
+  .section-how__articles-list {
+    max-width: none;
+  }
+
+  .header__title {
+    margin-block-start: 117px;
+  }
+
+  .section {
+    column-gap: 30px;
+  }
+
+  .section-what {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content max-content;
+  }
+
+  .section-what h2.title {
+    grid-row: 1;
+    max-width: 300px;
+  }
+
+  .section_what__articles-list {
+    grid-row: 2;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .header {
+    padding: 20px 20px 20px 0px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    margin-inline-start: 20px;
+    margin-block-start: 0;
+    margin-block-end: 215px;
+    position: absolute;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .footer__title {
+    font-size: 157px;
+  }
 }
