--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 .page {
   color: var(--text-color, #f1b2ce);
-  font-family: var(--page-font-family, "IBM Plex mono", monospace);
+  font-family: var(--page-font-family, "IBM Plex mono"), monospace;
   font-size: 18px;
   line-height: 23.4px;
   background-color: var(--page-background-color, #fff);
@@ -25,11 +25,13 @@
   );
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 
 .decorated-zone::before,
 .decorated-zone::after {
   content: "";
+  position: absolute;
   inline-size: 25px;
   block-size: 25px;
 }
@@ -41,11 +43,14 @@
   inset-block-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
   justify-self: end;
   align-self: start;
+  position: absolute;
 }
 
 .decorated-zone::after {
   border-inline-start: 1px solid var(--secondary-color, #ff0070);
   border-block-end: 1px solid var(--secondary-color, #ff0070);
+  inset-inline-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
   justify-self: start;
   align-self: end;
 }
@@ -66,6 +71,7 @@
   background: var(--accent-color, #ff0070);
   inline-size: 9px;
   block-size: 9px;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
 }
 
 .rec-decor::before {
@@ -77,7 +83,7 @@
 .header__theme-menu {
   justify-self: end;
   align-self: start;
-  margin-top: 39px;
+  margin-top: 65px;
   color: var(--secondary-color);
   cursor: pointer;
 }
@@ -89,6 +95,7 @@
 }
 
 .header__theme-menu-button {
+  appearance: none;
   border: 1px solid transparent;
   padding: 2px 12px;
   color: var(--secondary-color, #ff0070);
@@ -153,6 +160,14 @@
   text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
 }
 
+.link.shadow-decor:hover {
+  text-decoration: underline;
+}
+
+.link.shadow-decor:focus {
+  border: 1px solid var(--text-color, #F1B2CE);
+}
+
 .section {
   display: grid;
   gap: 20px;
@@ -160,6 +175,10 @@
 
 .section-how__title {
   margin-block-end: 20px;
+}
+
+h4.title {
+  font-weight: 400;
 }
 
 .articles-list {
@@ -205,6 +224,7 @@
   height: 100vh;
   min-height: 668px;
   display: grid;
+  position: relative;
   padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
 }
 
@@ -214,7 +234,7 @@
   text-shadow: 4px 4px 0 var(--accent-color);
   line-height: 83%;
   font-weight: 700;
-  margin-block-start: 125px;
+  align-self: center;
 }
 
 @media (width >= 768px) {
@@ -267,12 +287,6 @@
     grid-row-start: span 2;
   }
 
-  .header {
-    padding: 0;
-    padding-right: 20px;
-    display: grid;
-  }
-
   .header__theme-menu {
     margin-block-start: 170px;
     margin-block-end: 70px;
@@ -281,11 +295,15 @@
   .page__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     align-self: flex-start;
-    margin-block-start: 100px;
+    margin-block-start: 110px;
+  }
+
+  .header {
+    padding: 20px 20px 20px 0;
   }
 
   .header__title {
-    margin-block-start: 45px;
+    margin-block-start: 160px;
     justify-self: end;
     inline-size: clamp(364px, calc(100% / 2 - 10px), 491px);
   }
@@ -295,17 +313,21 @@
     padding: 60px 20px;
   }
 
+  .footer {
+    position: relative;
+    padding: 0;
+  }
+
   .footer__title {
     justify-self: center;
     align-self: center;
-    margin-block-end: 139px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
 @media (width >= 1024px) {
   .page__title {
-    text-shadow: 4px 4px 0 var(--color-purple-2, #ff0070);
-    margin-block-start: 270px;
+    margin-block-start: 200px;
   }
 
   .section-how__articles-list {
@@ -336,22 +358,16 @@
   }
 
   .header {
-    padding: 20px 20px 20px 0px;
+    padding: 20px 20px 0 0; 
   }
 
   .header__theme-menu {
     justify-self: center;
     margin-inline-start: 20px;
     margin-block-start: 0;
-    margin-block-end: 215px;
-    position: absolute;
   }
 
   .header__theme-menu-list {
     flex-direction: row;
-  }
-
-  .footer__title {
-    font-size: 157px;
   }
 }
