--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,6 +3,16 @@
   и их переопределение под различные устройства
 */
 :root {
+  --color-pink-1: #fff1f7;
+  --color-pink-3: #ffc2e6;
+  --color-pink-4: #ff8dcb;
+  --color-purple-1: #db00ff;
+  --color-purple-2: #ff0070;
+  --color-purple-2-o-40: #ff007040;
+  --color-black-1: #000028;
+  --color-black-2: #353430;
+  --color-black-2-o-40: #35343040;
+
   --brand-color: #db00ff;
   --page-font-family: "IBM Plex mono", monospace;
   --secondary-color-o-40: #ff007040;
